[package]
name = "heartbeat-sender"
version = "0.1.0"
edition = "2021"
authors = ["CappeDiem"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
openssl = { version = "0.10.64", features = ["vendored"]}
reqwest = { version = "0.11.27", features = ["blocking"] }
